# hugo_encryptor

./: .gitignore  pyproject.toml
hugo_encryptor/: encrypt.py
